# Calories_Calcualtor_Qt_GUI

./: CMakeLists.txt  README.md  person.cpp  person.h  widget.cpp  widget.h  widget.ui
